[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Level/BaseLevelRoom.gd" type="Script" id=1]
[ext_resource path="res://assets/art/tileset/tileset.tres" type="TileSet" id=2]
[ext_resource path="res://src/Level/Door.tscn" type="PackedScene" id=3]

[node name="BaseLevelRoom" type="Node2D"]
script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1

[node name="Door_Left" parent="." instance=ExtResource( 3 )]

[node name="Door_Right" parent="." instance=ExtResource( 3 )]

[node name="Door_Up" parent="." instance=ExtResource( 3 )]
bVerticalDoor = false

[node name="Door_Down" parent="." instance=ExtResource( 3 )]
bVerticalDoor = false

[node name="RoomLabel" type="Label" parent="."]
margin_right = 128.0
margin_bottom = 64.0
text = "TEST
"

[connection signal="PlayerEntered" from="Door_Left" to="." method="_on_Door_Left_PlayerEntered"]
[connection signal="PlayerExited" from="Door_Left" to="." method="_on_Door_Left_PlayerExited"]
[connection signal="PlayerEntered" from="Door_Right" to="." method="_on_Door_Right_PlayerEntered"]
[connection signal="PlayerExited" from="Door_Right" to="." method="_on_Door_Right_PlayerExited"]
[connection signal="PlayerEntered" from="Door_Up" to="." method="_on_Door_Up_PlayerEntered"]
[connection signal="PlayerExited" from="Door_Up" to="." method="_on_Door_Up_PlayerExited"]
[connection signal="PlayerEntered" from="Door_Down" to="." method="_on_Door_Down_PlayerEntered"]
[connection signal="PlayerExited" from="Door_Down" to="." method="_on_Door_Down_PlayerExited"]
